2008-01-29  Brandon Sneed  <nivenh@sourceware.org>

	* include/winnt.h (SYSTEM_POWER_CONDITION): typedef.
	* include/winuser.h (PBT_POWERSETTINGCHANGE, DEVICE_NOTIFY_WINDOW_HANDLE,
	DEVICE_NOTIFY_SERVICE_HANDLE): define.
	* include/winuser.h (LPCGUID, HPOWERNOTIFY, POWERBROADCAST_SETTING): typedefs.
	* include/winuser.h (GUID_POWERSCHEME_PERSONALITY, GUID_MIN_POWER_SAVINGS,
	GUID_MAX_POWER_SAVINGS, GUID_TYPICAL_POWER_SAVINGS, GUID_ACDC_POWER_SOURCE,
	GUID_BATTERY_PERCENTAGE_REMAINING, GUID_IDLE_BACKGROUND_TASK,
	GUID_SYSTEM_AWAYMODE, GUID_MONITOR_POWER_ON): added externs for GUIDs.
	* include/winuser.h (RegisterPowerSettingNotification,
	UnregisterPowerSettingNotification): Add prototypes.
	* lib/user32.def: Added imports for the above prototypes.
	* lib/Makefile.in: Added build support for power-uuid.c.
	* lib/power-uuid.c: New file containing power GUID definitions.


2008-01-29  Brandon Sneed  <nivenh@sourceware.org>

	* include/ras.h (RAS_MaxDnsSuffix): define.

2008-01-29  Brandon Sneed  <nivenh@sourceware.org>

	* include/psapi.h (GetProcessImageFileNameA, GetProcessImageFileNameW): 
	Add prototypes.
	* lib/psapi.def (GetProcessImageFileNameA@12, GetProcessImageFileNameW@12):
	Add exports.

2007-12-27  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.11.
	* Makefile.in: Ditto.

2007-12-11  Dave Korn  <dave.korn@artimi.com>

	* include/wincrypt.h (PCRYPT_DECODE_PARA):  Add missing typedef.
	(CERT_POLICY_MAPPINGS_INFO):  Move before CERT_POLICY_MAPPING.

2007-12-03  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wingdi.h: Change WINVER guard to _WIN32_WINNT.

2007-12-03  techrazy  <techrazy@users.sourceforge.net>

	* include/wingdi.h (NTM_NONNEGATIVE_AC, NTM_PS_OPENTYPE, NTM_TT_OPENTYPE,
	NTM_MULTIPLEMASTER, NTM_TYPE1, NTM_DSIG): define.

2007-11-21  Kevin Conaway  <kevin_conaway@users.sourceforge.net>

	* include/wincrypt.h (CryptProtectData, CryptUnprotectData): define.
